--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,19 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.font-inter {
+  font-family: 'Inter', serif;
+  letter-spacing: -0.8px;
+  line-height: 27.9px;
+  color: black;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.font-inter{
+  font-family: 'Inter', serif;
+  letter-spacing: -0.8px;
+  line-height: 27.9px;
+  color: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.element::-webkit-scrollbar {
+  display: none;
 }
